2009-01-06  Christos Zoulas <christos@zoulas.com>

	* re-renerate all generated files with newer versions of the
	  auto-tools.

	* move INSTALL to INSTALL.am-utils to avoid conflicts

	* fix incompatibilities with new m4 and new autoconf.

2009-01-02  Christos Zoulas <christos@zoulas.com>

	* add nocasetrans, nojoliet, rrcaseins for cd9660 filesystems

2008-12-03  Christos Zoulas <christos@zoulas.com>

	* allow ldap queries try a comma-separated list of servers given as:

		ldap_hostports = host1:port1,host2,host3:port3

	  original patch from Florian Geyer

2008-09-19  Christos Zoulas <christos@zoulas.com>

	* the auth_create gid on NetBSD is int

	* deal with lossage from flex -P

	* fix missing/incorrect prototypes

2008-09-17  Christos Zoulas <christos@zoulas.com>

	* fix manual page section issues (sorting, non-existant)

	* add missing forward declarations

	* avoid null pointer derefs (coverity)

	* more portable endian detection support

	* implement tmpfs support

	* use sizeof var instead of constant

	* fix yyerror declaration and definition

	* fix yy function renaming, and correct some renaming issues.

	* work around automake < 1.9 issue where ylwrap is not being run
	  for a single yacc or lex file.

	* NetBSD
	  - handle headers that need other headers to compile
	  - add exfs and tmpfs specific glue
	  - add options log, noatime, nocoredump, nodevmtime, softdep,
	    symperm, union
	  - NetBSD's new mount system call needs the size of the opaque
	    filesystem specific structure, but passing 0 for now works.
	    We would need to change a lot more code to pass the size from
	    the fs-specific calls, so for now punt.
	  - recvfrom takes socklen_t * on NetBSD
	  - handle newer NetBSD using statvfs
	  - NetBSD calls its ufs ffs

	* Linux
	  - Most recent kernels have trouble with trying to parse the pid
	    hostname and do locking. What before was a silent failure, now
	    there is a warning printed and the mount is rejected. This is